# token-tracker

./: .gitignore  AGENTS.md  IMPLEMENTATION_GUIDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.agents/skills/token-tracker/: SKILL.md
.agents/skills/token-tracker/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: ci-cd-pipeline-update.md  feature-development.md  tauri-version-or-config-upgrade.md
.claude/homunculus/instincts/inherited/: token-tracker-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml  release.yml
docs/: release-pipeline-debugging.md
scripts/: release-check.cjs  release-prepare.cjs  version-bump.cjs  version-verify.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  main.rs
src-tauri/src/parsers/: claude.rs  opencode.rs  roo.rs
src/components/: ActivityGraph.tsx  IDESelector.tsx  StatsCards.tsx
src/lib/: timeRanges.ts
src/stores/: tokenStore.ts
src/test/: app.test.ts
src/types/: index.ts
